로그인, 회원가입

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.style">
-        <activity android:name=".Face"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Face"/>
+        <activity
+            android:name=".Login"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="Create Account"/>
+        <activity android:name=".MainActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
