--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'androidx.biometric:biometric:1.0.1'
+
+    implementation "com.kakao.sdk:v2-user:2.4.1" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.4.1" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.4.1" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.4.1" // 메시지(카카오링크)
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 }
