--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "com.kakao.sdk:v2-talk:2.4.1" // 친구, 메시지(카카오톡)
     implementation "com.kakao.sdk:v2-story:2.4.1" // 카카오스토리
     implementation "com.kakao.sdk:v2-link:2.4.1" // 메시지(카카오링크)
+    implementation 'me.relex:circleindicator:1.2.2' // 스와이프
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
